--- a/source/NAMESPACE
+++ b/source/NAMESPACE
@@ -3,6 +3,9 @@ import(utils)
 import(survival)
 import(msm)
 useDynLib(Immunotherapy.Design)
-export(Pembedded.EM.NP, getHazard, Pembedded.EM.P, generate_data,
-       Pembedded.ReRandomizationTest.NP, Pembedded.ReRandomizationTest.P,
-       Pow.Pembedded.P, N.Pembedded.P, Pow.Pembedded.NP)
+export(N.PRIME.LRT, PRIME.EM, getHazard,
+       Pembedded.EM.P, generate_data,
+       PRIME.ReRandomizationTest, Pembedded.ReRandomizationTest.P,
+       Pow.Pembedded.P, N.Pembedded.P,
+       Pow.PRIME.ReRandomizationTest, Pow.PRIME.LRT,
+       PRIME.LRT)
