Use correct log full likelihood: observed-data for trt[i]=1, complete-data for trt[i]=0

--- a/source/DESCRIPTION
+++ b/source/DESCRIPTION
@@ -8,4 +8,4 @@ Maintainer: Bill Wheeler <wheelerb@imsweb.com>
 Depends: survival, msm
 License: GPL-2
 NeedsCompilation: yes
-Packaged: 2020-05-18 18:13:18 UTC; wheelerwi
+Packaged: 2021-02-19 04:31:51 UTC; snoweye
